// Copyright(c) 2017-2018 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

option go_package  = "github.com/lf-edge/eve/api/go/config";
option java_package = "com.zededa.cloud.uservice.proto";

import "devmodel.proto"; // FIXME: this import is because of Adapter in common

message UUIDandVersion {
	string uuid = 1;
	string version = 2;
}

// Device Operational Commands Semantic
// For rebooting device,  command=Reset, counter = counter+delta, desiredState = on
// For poweroff device,  command=Reset, counter = counter+delta, desiredState = off
// For backup at midnight, command=Backup, counter = counter+delta, desiredState=n/a, opsTime = mm/dd/yy:hh:ss
// Current implementation does support only single command outstanding for each type
// In future can be extended to have more scheduled events
//
message DeviceOpsCmd {
        uint32 counter = 2;
        bool desiredState = 3;
        // FIXME: change to timestamp, once we move to gogo proto
        string opsTime = 4;
}

// Timers and other per-device policy which relates to the interaction
// with zedcloud. Note that the timers are randomized on the device
// to avoid synchronization with other devices. Random range is between
// between .5 and 1.5 of these nominal values. If not set (i.e. zero),
// it means the default value of 60 seconds.
message ConfigItem {
        string key = 1;         // E.g., "configinterval"
        string value = 2;
        // deprecated = 3;
        // deprecated = 4;
        // deprecated = 5;
        // deprecated = 6;
        // deprecated = 7;
}


// Adapter bundles corresponding to a subset of what is in ZioBundle
message Adapter {
  PhyIoType type = 1;
  string name = 2;	// Short hand name such as "com" from bundle
}

// Cipher information for sensitive data.

// Security Key Exchange Method
enum KeyExchangeScheme {
    KEA_NONE = 0;
    KEA_ECDH = 1;
}

// Encryption Scheme for Cipher Payload
enum EncryptionScheme {
    SA_NONE = 0;
    SA_AES_256_CFB = 1;
}

message CipherInfo {
    string id = 100;

    KeyExchangeScheme keyExchangeScheme = 1;
    EncryptionScheme encryptionScheme = 2;

    // Initial Value for ECDH computation
    bytes initialValue = 3;

    // controller provided public certificate
    bytes publicCert = 4;

    // sha of the public certificate
    string sha256 = 5;

    // signature for the sha
    bytes signature = 6;
}
